--- a/terrazzo/assets/index.html
+++ b/terrazzo/assets/index.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="utf-8" />
     <title>Terrazzo</title>
-    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
-    <link rel="stylesheet" href="/assets/css/generated.css" />
-    <link rel="stylesheet" href="/assets/xterm/css/xterm.css" />
-    <script type="module" src="/assets/xterm/lib/xterm.js"></script>
-    <script type="module" src="/assets/xterm/lib/addon-fit.js"></script>
-    <script type="module" src="/assets/xterm/lib/addon-web-links.js"></script>
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
+    <link rel="stylesheet" href="/static/common.css" />
+    <link rel="stylesheet" href="/static/terrazzo.css" />
+    <link rel="stylesheet" href="/static/xterm.css" />
+    <script type="module" src="/static/xterm.js"></script>
+    <script type="module" src="/static/xterm-addon-fit.js"></script>
+    <script type="module" src="/static/xterm-addon-web-links.js"></script>
 </head>
 
 <body style="background-color: black; color: white;">
     <div id="main"></div>
-    <script type="module" src="/assets/bootstrap.js"></script>
+    <script type="module" src="/static/bootstrap.js"></script>
 </body>
 
 </html>
